fix(p2): harden registry identity and deterministic ordering