@@ -1,9 +1,11 @@
 package dev.worldrpg.api.registry;
 
 import dev.worldrpg.api.data.RpgDefinition;
+import dev.worldrpg.api.id.RpgId;
 import dev.worldrpg.api.validation.SourceRef;
 import dev.worldrpg.api.validation.ValidationReport;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.NoSuchElementException;
@@ -12,14 +14,17 @@ import java.util.Optional;
 
 /**
  * Immutable set of definition registries published as one coherent snapshot.
+ *
+ * <p>Registry-domain IDs are globally unique inside a snapshot, independent of
+ * the Java definition type associated with the key.</p>
  */
 public final class RegistrySnapshot {
     private static final RegistrySnapshot EMPTY = new RegistrySnapshot(Map.of());
 
-    private final Map<RegistryKey<?>, DefinitionRegistry<?>> registries;
+    private final Map<RpgId, DefinitionRegistry<?>> registries;
 
-    private RegistrySnapshot(Map<RegistryKey<?>, DefinitionRegistry<?>> registries) {
-        this.registries = Map.copyOf(new LinkedHashMap<>(registries));
+    private RegistrySnapshot(Map<RpgId, DefinitionRegistry<?>> registries) {
+        this.registries = Collections.unmodifiableMap(new LinkedHashMap<>(registries));
     }
 
     public static RegistrySnapshot empty() {
@@ -34,14 +39,28 @@ public final class RegistrySnapshot {
         return registries.size();
     }
 
-    public Map<RegistryKey<?>, DefinitionRegistry<?>> registries() {
+    public Map<RpgId, DefinitionRegistry<?>> registries() {
         return registries;
     }
 
     @SuppressWarnings("unchecked")
     public <T extends RpgDefinition> Optional<DefinitionRegistry<T>> find(RegistryKey<T> key) {
         Objects.requireNonNull(key, "key");
-        return Optional.ofNullable((DefinitionRegistry<T>) registries.get(key));
+
+        DefinitionRegistry<?> registry = registries.get(key.id());
+        if (registry == null) {
+            return Optional.empty();
+        }
+
+        if (!registry.key().equals(key)) {
+            throw new IllegalArgumentException(
+                    "Registry key type mismatch for " + key.id()
+                            + ": active type is " + registry.key().definitionType().getName()
+                            + ", requested type is " + key.definitionType().getName()
+            );
+        }
+
+        return Optional.of((DefinitionRegistry<T>) registry);
     }
 
     public <T extends RpgDefinition> DefinitionRegistry<T> require(RegistryKey<T> key) {
@@ -52,7 +71,7 @@ public final class RegistrySnapshot {
     public static final class Builder {
         private static final SourceRef INTERNAL_SOURCE = SourceRef.of("<registry-snapshot>");
 
-        private final Map<RegistryKey<?>, DefinitionRegistry<?>> registries = new LinkedHashMap<>();
+        private final Map<RpgId, DefinitionRegistry<?>> registries = new LinkedHashMap<>();
 
         public <T extends RpgDefinition> boolean add(
                 DefinitionRegistry<T> registry,
@@ -61,17 +80,20 @@ public final class RegistrySnapshot {
             Objects.requireNonNull(registry, "registry");
             Objects.requireNonNull(report, "report");
 
-            RegistryKey<T> key = registry.key();
-            if (registries.containsKey(key)) {
+            RpgId registryId = registry.key().id();
+            DefinitionRegistry<?> existing = registries.get(registryId);
+            if (existing != null) {
                 report.error(
                         "registry.duplicate_registry",
-                        "Duplicate registry domain: " + key.id(),
+                        "Duplicate registry domain " + registryId
+                                + "; existing type is " + existing.key().definitionType().getName()
+                                + ", duplicate type is " + registry.key().definitionType().getName(),
                         INTERNAL_SOURCE
                 );
                 return false;
             }
 
-            registries.put(key, registry);
+            registries.put(registryId, registry);
             return true;
         }
 
